oprofile: Add support for Goldmont events
Add support for the Intel Goldmont events.

OFFCORE_RESPONSE.* is not supported.

v2: Fix typos in descriptions.
v3: Add inst_retired.any_pebs
Signed-off-by: Andi Kleen <ak@linux.intel.com>

--- a/events/Makefile.am
+++ b/events/Makefile.am
@@ -20,6 +20,7 @@ event_files = \
 	i386/broadwell/events i386/broadwell/unit_masks \
 	i386/skylake/events i386/skylake/unit_masks \
 	i386/silvermont/events i386/silvermont/unit_masks \
+	i386/goldmont/events i386/goldmont/unit_masks \
 	ppc64/architected_events_v1/events ppc64/architected_events_v1/unit_masks \
 	ppc64/power4/events ppc64/power4/event_mappings ppc64/power4/unit_masks \
 	ppc64/power5/events ppc64/power5/event_mappings ppc64/power5/unit_masks \
