s390: Add support for z13
On Wed, May 11 2016, Andreas Arnez wrote:

> So far oprofile supported z Systems (s390) machines up to zEC12.  This
> adds support for z13 as well.
>
> Signed-off-by: Andreas Arnez <arnez@linux.vnet.ibm.com>
> ---
>  events/Makefile.am  | 3 ++-
>  libop/op_cpu_type.c | 3 +++
>  libop/op_cpu_type.h | 1 +
>  libop/op_events.c   | 1 +
>  utils/ophelp.c      | 1 +
>  5 files changed, 8 insertions(+), 1 deletion(-)

Oops, that patch lacked the files in the new directory
"events/s390/z13".  Corrected version below.  Is this OK?

-- >8 --
Subject: [PATCH] s390: Add support for z13

So far oprofile supported z Systems (s390) machines up to zEC12.  This
adds support for z13 as well.

Signed-off-by: Andreas Arnez <arnez@linux.vnet.ibm.com>

--- a/events/Makefile.am
+++ b/events/Makefile.am
@@ -81,7 +81,8 @@ event_files = \
 	tile/tilegx/events tile/tilegx/unit_masks \
 	s390/z10/events s390/z10/unit_masks \
 	s390/z196/events s390/z196/unit_masks \
-	s390/zEC12/events s390/zEC12/unit_masks
+	s390/zEC12/events s390/zEC12/unit_masks \
+	s390/z13/events s390/z13/unit_masks
 
 install-data-local:
 	for i in ${event_files} ; do \
