1/2 Oprofile support for Power9
Hi,

Add initial support for PPC64/Power9 to oprofile.
This includes the documentation updates to indicate "power9",
the PVR values, and all the other updates that will be necessary.
(This is based on a review of changes made when Power8 support
was initially added).
The long-ish event list follows as a subsequent patch.

Signed-off-by:  Will Schmidt <will_schmidt@vnet.ibm.com>

--

--- a/events/Makefile.am
+++ b/events/Makefile.am
@@ -29,6 +29,7 @@ event_files = \
 	ppc64/power6/events ppc64/power6/event_mappings ppc64/power6/unit_masks \
 	ppc64/power7/events ppc64/power7/event_mappings ppc64/power7/unit_masks \
 	ppc64/power8/events ppc64/power8/unit_masks \
+	ppc64/power9/events ppc64/power9/unit_masks \
 	ppc64/970/events ppc64/970/event_mappings ppc64/970/unit_masks \
 	ppc64/970MP/events ppc64/970MP/event_mappings ppc64/970MP/unit_masks \
 	x86-64/hammer/events x86-64/hammer/unit_masks \
