opjitconv: add initial manpage
Currently opjitconv does not have a manpage, which causes some lintian
error on some Linux Distribution, as Debian.

This patch adds an initial manpage for opjitconv.

Signed-off-by: Roberto Oliveira <robertoguimaraes8@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -425,6 +425,7 @@ AC_OUTPUT(Makefile \
 	doc/opimport.1 \
 	doc/operf.1 \
 	doc/ocount.1 \
+	doc/opjitconv.1 \
 	doc/srcdoc/Doxyfile \
 	libpp/Makefile \
 	opjitconv/Makefile \
