Include op_bfd_wrappers.h in the distribution
Need to add op_bfd_wrappers.h to list of files in the distribution so
it is included in the tarball.  Without this patch the build using
oprofile*.tar.gz will fail due to the missing header file.

--- a/libutil/Makefile.am
+++ b/libutil/Makefile.am
@@ -28,4 +28,5 @@ libutil_a_SOURCES = \
 	op_version.c \
 	op_version.h \
 	op_growable_buffer.c \
-	op_growable_buffer.h
+	op_growable_buffer.h \
+	op_bfd_wrappers.h
